####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = firgen

## INCLUDES were found outside kdevelop specific part

firgen_SOURCES = structurelist.cpp structure2vhdl93.cpp structure2vhdl87.cpp structure2matlab.cpp redfir.cpp parsfirfile.cpp nodegraph.cpp implement.cpp geneticoptimizer.cpp fir2hdl.cpp exception.cpp dna.cpp bitnumber.cpp benchmark.cpp 
firgen_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = benchmark.h bitnumber.h dna.h exception.h fir2hdl.h geneticoptimizer.h graphtool.h implement.h nodegraph.h parsfirfile.h structure2matlab.h structure2vhdl87.h structure2vhdl93.h structurelist.h benchmark.cpp bitnumber.cpp dna.cpp exception.cpp fir2hdl.cpp geneticoptimizer.cpp implement.cpp nodegraph.cpp parsfirfile.cpp redfir.cpp structure2matlab.cpp structure2vhdl87.cpp structure2vhdl93.cpp structurelist.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
firgen_LDFLAGS = $(all_libraries) 
                                                                                
